# svc-llm-template

./: README.md  pyproject.toml  requiremenst.txt  requirements.txt
.chroma/2c1d7d29-a8c7-4549-95e9-6235d0cc2b3f/: index_metadata.pickle
.devcontainer/: devcontainer.json
app/: ChatApp.py
app/.ipynb_checkpoints/: ChatApp-checkpoint.py  Untitled-checkpoint.ipynb
data/: keywords.txt
data/converted/: K2024~25 BM_250926.txt  NAMING RULE 기준.txt  안전재고 산출식_250822_1.txt  해외 Warranty 기준.txt
data/finetune/: dpo_scan.train.json  dpo_scan.val.json  dpo_scan_train_v4.json  dpo_scan_val_v4.json  dpo_standard.train.clean.jsonl  dpo_standard.train.v2.jsonl  dpo_standard.val.clean.jsonl  dpo_standard.val.v4.safe.jsonl  svc_merged.dataset_info.json
data/processed/md/: bm_cases.md  naming_rule.md  safety_stock_formula.md  warranty_rules.md
data/raw/: K2024~25 BM_250926.xlsx  NAMING RULE 기준.xlsx  안전재고 산출식_250822_1.xlsx  해외 Warranty 기준.xlsx
scripts/: cap_dpo_tokens.py  convert_dpo_v2.py  ft_run_41mini_v2.py  ft_status.py  ingest.py  ingest_pinecone.py  ingest_rag.py  merge_ft_v2.py  preprocess_clean.py  test_ft_model.py  test_rag_chain.py  test_rag_chain_pinecone.py  validate_all.py  wandb_sync_openai_ft.py  xls2md.py
src/svc_llm/: config.py  logging.py
src/svc_llm.egg-info/: SOURCES.txt
src/svc_llm/api/: main.py
tests/: test_chain_smoke.py  test_icon_actions.py
wandb/: latest-run
wandb/run-20250930_090235-y5nvqnp1/: run-y5nvqnp1.wandb
wandb/run-20250930_091309-ttcbzox0/: run-ttcbzox0.wandb
wandb/run-20250930_092452-2its8yk3/: run-2its8yk3.wandb
(+22 files in other folders)
