[project]
name = "svc-llm-template"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["svc_llm"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "svc-llm"
version = "0.1.0"

[tool.setuptools.packages.find]
where = ["src"]